--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "websockets>=12.0",
     "openai>=1.0.0",
     "google-cloud-texttospeech>=2.14.0",
+    "langdetect>=1.0.9",
 ]
 
 [dependency-groups]
