--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "sentence-transformers>=5.1.2",
     "aiohttp>=3.9.0",
     "websockets>=12.0",
+    "websocket-client>=1.6.0",
     "openai>=1.0.0",
     "google-cloud-texttospeech>=2.14.0",
     "langdetect>=1.0.9",
